<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
	http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.gicappa</groupId>
        <artifactId>superpom</artifactId>
        <version>1.0</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.gicappa.webapp</groupId>
    <artifactId>template-core</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>
    <name>webapp template</name>
    <url>http://webapp.gianka.it</url>

    <organization>
        <name>ACME Ltd</name>
        <url>http://acme.com</url>
    </organization>
<!--
    <scm>
        <connection>scm:svn:http://svn.omniwhere.it/repos/itw/trunk</connection>
        <developerConnection>scm:svn:http://svn.omniwhere.it/repos/itw/trunk</developerConnection>
        <url>http://svn.omniwhere.it/repos/itw/trunk</url>
    </scm>

    <developers>
        <developer>
            <id>gicappa</id>
            <name>Gian Carlo Pace</name>
            <email>giancarlo.pace@kemen.it</email>
            <organization>kemen</organization>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>
    <ciManagement>
        <notifiers>
            <notifier>
                <address>giancarlo.pace@gmail.com</address>
                <sendOnError>true</sendOnError>
                <sendOnFailure>true</sendOnFailure>
                <sendOnSuccess>false</sendOnSuccess>
                <sendOnWarning>true</sendOnWarning>
            </notifier>
        </notifiers>
    </ciManagement>

-->
    <properties>
        <jdk.version>1.6</jdk.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <argLine>-Xmx512m -XX:MaxPermSize=256M -XX:PermSize=20M</argLine>
                    <excludes>
                        <exclude>**/*ITest.java</exclude>
                        <exclude>**/infrastructure/**/*Test.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-tests</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <skip>${integration.tests.skip}</skip>
                            <includes>
                                <include>**/*ITest.java</include>
                                <include>**/infrastructure/**/*Test.java</include>
                            </includes>
                            <excludes>
                                <exclude>must-be-here-for-maven</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <fork>true</fork>
                    <meminitial>128m</meminitial>
                    <maxmem>512m</maxmem>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>domain</module>
        <module>infrastructure</module>
        <module>ui</module>
    </modules>

</project>